[tool.poetry]
name = "chronos_bot"
version = "0.1.0"
description = "A Gestione2 based telegram bot."
authors = ["Nemesis <lorenzo.balugani@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.9"
SQLAlchemy = "^1.4.23"
psycopg2-binary = "^2.9.1"
requests = "^2.26.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
